--- a/pom.xml
+++ b/pom.xml
@@ -67,11 +67,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId> 
+		 	<artifactId>flyway-core</artifactId> 
+			<version>6.4.4</version> 
+		</dependency>
 	</dependencies>
 	<distributionManagement>
 		<snapshotRepository>
 			<id>nexus</id>
-			<url>http://13.233.45.5:8081/nexus/content/repositories/snapshots</url>
+			<url>http://13.232.90.31:8081/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -104,6 +109,20 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+			    	<artifactId>flyway-maven-plugin</artifactId>
+			    	<version>6.4.4</version>
+			    	<configuration>
+					<baselineOnMigrate>true</baselineOnMigrate>
+				 	<url>jdbc:mysql://13.126.65.23:3306</url>
+				 	<user>inguser2</user>
+				  	<password>H@ckath0n</password>
+			      		<schemas>
+				  		<schema>forexpay</schema>
+					</schemas>
+			  	</configuration>	
 			</plugin>
 		</plugins>
 	</build>
