--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database Configuration
-spring.datasource.url=jdbc:mysql://13.126.65.23:3306/forexpay?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://13.126.65.23:3306/forexpay
 spring.datasource.username=inguser3
 spring.datasource.password=H@ckath0n
 
