--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
 			**/exception/*
 		</sonar.coverage.exclusions>
 	</properties>
+	
+	<scm>
+		<connection>scm:git:https://github.com/Nani0406/ForexPay.git</connection>
+		<url>https://github.com/Nani0406/ForexPay.git</url>
+		<developerConnection>scm:git:https://Nani0406:Nani_0406@github.com/Nani0406/ForexPay.git</developerConnection>
+		<tag>HEAD</tag>
+  	</scm>
 
 	<dependencies>
 		<dependency>
@@ -78,6 +85,10 @@
 			<id>nexus</id>
 			<url>http://13.234.238.44:8081/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
+		<repository>
+			<id>nexus</id>
+			<url>http://13.234.238.44:8081/nexus/content/repositories/releases</url>
+		</repository>
 	</distributionManagement>
 
 	<build>
@@ -89,6 +100,14 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+			 	<artifactId>maven-release-plugin</artifactId>
+			 	<version>3.0.0-M1</version>
+			 	<configuration>
+			    		<tagNameFormat>v@{project.version}</tagNameFormat>
+				 </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
