--- a/pom.xml
+++ b/pom.xml
@@ -133,8 +133,8 @@
 			    	<version>6.4.4</version>
 			    	<configuration>
 					<baselineOnMigrate>true</baselineOnMigrate>
-				 	<url>jdbc:mysql://13.126.65.23:3306</url>
-				 	<user>inguser3</user>
+				 	<url>jdbc:mysql://13.232.31.28:3306</url>
+				 	<user>inguser</user>
 				  	<password>H@ckath0n</password>
 			      		<schemas>
 				  		<schema>forexpay</schema>
