--- a/flyway.conf
+++ b/flyway.conf
@@ -1,6 +1,6 @@
 flyway.driver=com.mysql.jdbc.Driver 
-flyway.url=jdbc:mysql://13.126.65.23:3306/forexpay?useSSL=false 
-flyway.user=inguser3
+flyway.url=jdbc:mysql://13.232.31.28:3306//forexpay?useSSL=false 
+flyway.user=inguser
 flyway.password=H@ckatha0n 
 flyway.schemas=forexpay 
 flyway.locations=filesystem:src/main/resources/db/migration 
