--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Database Configuration
-spring.datasource.url=jdbc:mysql://13.126.65.23:3306/forexpay
-spring.datasource.username=inguser3
+spring.datasource.url=jdbc:mysql://13.232.31.28:3306/forexpay
+spring.datasource.username=inguser
 spring.datasource.password=H@ckath0n
 
 server.port=9090
