--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,20 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+			    	<artifactId>flyway-maven-plugin</artifactId>
+			    	<version>6.4.4</version>
+			    	<configuration>
+					<baselineOnMigrate>true</baselineOnMigrate>
+				 	<url>jdbc:mysql://52.66.214.30:3306</url>
+				 	<user>inguser</user>
+				  	<password>H@ckath0n</password>
+			      		<schemas>
+				  		<schema>forexpay</schema>
+					</schemas>
+			  	</configuration>	
+			</plugin>
 		</plugins>
 	</build>
 
