--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,16 @@
 			      		<schemas>
 				  		<schema>forexpay</schema>
 					</schemas>
-			  	</configuration>	
+			  	</configuration>
+				<configuration>
+					<baselineOnMigrate>true</baselineOnMigrate>
+				 	<url>jdbc:mysql://52.66.244.13:3306</url>
+				 	<user>inguser</user>
+				  	<password>H@ckath0n</password>
+			      		<schemas>
+				  		<schema>forexpay</schema>
+					</schemas>
+			  	</configuration>
 			</plugin>
 		</plugins>
 	</build>
