--- a/pom.xml
+++ b/pom.xml
@@ -131,24 +131,30 @@
 				<groupId>org.flywaydb</groupId>
 			    	<artifactId>flyway-maven-plugin</artifactId>
 			    	<version>6.4.4</version>
-			    	<configuration>
-					<baselineOnMigrate>true</baselineOnMigrate>
-				 	<url>jdbc:mysql://13.235.247.152:3306</url>
-				 	<user>inguser</user>
-				  	<password>H@ckath0n</password>
-			      		<schemas>
-				  		<schema>forexpay</schema>
-					</schemas>
-			  	</configuration>
-				<configuration>
-					<baselineOnMigrate>true</baselineOnMigrate>
-				 	<url>jdbc:mysql://52.66.244.13:3306</url>
-				 	<user>inguser</user>
-				  	<password>H@ckath0n</password>
-			      		<schemas>
-				  		<schema>forexpay</schema>
-					</schemas>
-			  	</configuration>
+				<executions>
+        				<execution>
+						<configuration>
+							<baselineOnMigrate>true</baselineOnMigrate>
+							<url>jdbc:mysql://13.235.247.152:3306</url>
+							<user>inguser</user>
+							<password>H@ckath0n</password>
+							<schemas>
+								<schema>forexpay</schema>
+							</schemas>
+						</configuration>
+					</execution>
+					<execution>
+						<configuration>
+							<baselineOnMigrate>true</baselineOnMigrate>
+							<url>jdbc:mysql://52.66.244.13:3306</url>
+							<user>inguser</user>
+							<password>H@ckath0n</password>
+							<schemas>
+								<schema>forexpay</schema>
+							</schemas>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
