--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,9 @@
 				<executions>
         				<execution>
 						<id>first-execution</id>
+						<goals>
+                					<goal>migrate</goal>
+            					</goals>
 						<configuration>
 							<baselineOnMigrate>true</baselineOnMigrate>
 							<url>jdbc:mysql://13.235.247.152:3306</url>
@@ -146,6 +149,9 @@
 					</execution>
 					<execution>
 						<id>second-execution</id>
+						<goals>
+                					<goal>migrate</goal>
+            					</goals>
 						<configuration>
 							<baselineOnMigrate>true</baselineOnMigrate>
 							<url>jdbc:mysql://52.66.244.13:3306</url>
