--- a/pom.xml
+++ b/pom.xml
@@ -133,10 +133,19 @@
 			    	<version>6.4.4</version>
 				<executions>
 					<execution>
+						<id>first-execution</id>
+						<configuration>
+							<baselineOnMigrate>true</baselineOnMigrate>
+							<url>jdbc:mysql://13.235.247.152:3306</url>
+							<user>inguser</user>
+							<password>H@ckath0n</password>
+							<schemas>
+								<schema>forexpay</schema>
+							</schemas>
+						</configuration>
+					</execution>
+					<execution>
 						<id>second-execution</id>
-						<goals>
-                					<goal>migrate</goal>
-            					</goals>
 						<configuration>
 							<baselineOnMigrate>true</baselineOnMigrate>
 							<url>jdbc:mysql://52.66.244.13:3306</url>
