--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,11 @@
 	<distributionManagement>
 		<snapshotRepository>
 			<id>nexus</id>
-			<url>http://52.66.197.219:8081/nexus/content/repositories/snapshots</url>
+			<url>http://52.66.63.63:8081/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 		<repository>
 			<id>nexus</id>
-			<url>http://52.66.197.219:8081/nexus/content/repositories/releases</url>
+			<url>http://52.66.63.63:8081/nexus/content/repositories/releases</url>
 		</repository>
 	</distributionManagement>
 
@@ -134,10 +134,12 @@
 				<executions>
 					<execution>
 						<id>first-execution</id>
-						
+						<goals>
+							<goal>migrate</goal>
+						</goals>
 						<configuration>
 							<baselineOnMigrate>true</baselineOnMigrate>
-							<url>jdbc:mysql://13.235.247.152:3306</url>
+							<url>jdbc:mysql://35.154.158.204:3306</url>
 							<user>inguser</user>
 							<password>H@ckath0n</password>
 							<schemas>
@@ -147,10 +149,12 @@
 					</execution>
 					<execution>
 						<id>second-execution</id>
-						
+						<goals>
+							<goal>migrate</goal>
+						</goals>
 						<configuration>
 							<baselineOnMigrate>true</baselineOnMigrate>
-							<url>jdbc:mysql://13.233.15.221:3306</url>
+							<url>jdbc:mysql://13.233.199.195:3306</url>
 							<user>inguser</user>
 							<password>H@ckath0n</password>
 							<schemas>
